# trickster

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  app.py  cli.py  config.json  docker-compose.yml  gunicorn.conf.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  publish.yml  publish_docker.yml  publish_docker_latest.yml  publish_pypi.yml  tests.yml
docs/: api.md  cli-utils.md  configuration.md  index.md  installation.md
docs/api/: authentication.md  dynamic-responses.md  endpoints.md  index.md  model.md  response_codes.md  responses.md
docs/cookbook/: hello-world.md  index.md  login-form.md
frontend/: package.json
tests/: __init__.py  config.py  conftest.py  logger.py  meta.py  model.py  openapi.py  router.py  test_api.py  test_collections.py  test_input.py  test_router.py  test_validation.py  trickster_app.py
tests/endpoints/: internal.py  mocked.py
tests/integration/: __init__.py  test_api.py  test_external_endpoints.py  test_internal_endpoints.py  test_utility_endpoints.py
tests/mocked_files/: config.json  openapi.yaml
tests/unit/: __init__.py  test_api_app.py  test_auth.py  test_collections.py  test_config.py  test_input.py  test_routing.py  test_sys.py  test_validation.py
tests/unit/routing/: test_auth.py  test_input.py  test_router.py  test_routing.py
trickster/: __init__.py  api_app.py  auth.py  collections.py  config.py  endpoints.py  exception_handler.py  exceptions.py  input.py  logger.py  meta.py  model.py  openapi.py  router.py  routing.py  schemas.py  sys.py  trickster_app.py  utils.py  validation.py
trickster/endpoints/: external.py  internal.py  mocked.py  utility.py
trickster/routing/: __init__.py  auth.py  input.py  router.py
trickster/schemas/: dynamic_attribute.schema.json  request.schema.json  route.schema.json  routes.schema.json
