[flake8]
max-complexity = 6
max-line-length = 120
ignore =
    D107
    D401
exclude =
    .git
    build
    dist
    venv
    tests
per-file-ignores =
    tests/*:D103

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True

[coverage:run]
branch = True

[coverage:report]
skip_empty = True

[tool:pytest]
markers =
    unit
    integration

[options.entry_points]
console_scripts =
    trickster = trickster.api_app:run